# website_replicator

./: LICENSE  README.md  TESTME.BAT  main.py  pyproject.toml  pytest.ini  test_results.txt  website_replicator.spec
website_replicator/: __init__.py  __main__.py  _gui_entry.py  cli.py
website_replicator/core/: __init__.py  crawler.py  downloader.py  exporter.py  models.py  ratelimiter.py  replicator.py  robots.py
website_replicator/tests/: test_crawler.py  test_css_parser.py  test_downloader.py  test_fixes.py  test_helpers.py  test_models.py  test_replicator_integration.py  test_v6_features.py  test_v7_features.py
website_replicator/ui/: __init__.py  main_window.py  queue_panel.py  settings.py  theme.py  worker.py
website_replicator/utils/: css_parser.py  helpers.py
